fixed cutting off text

--- a/styles/EmployerContactPopup.module.scss
+++ b/styles/EmployerContactPopup.module.scss
@@ -61,6 +61,7 @@
           padding: 0 1rem;
           border-radius: 5px;
           border: 2px solid $red;
+          line-height: 4rem;
         }
 
         textarea {
